--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -5,15 +5,15 @@ $top-bar-height: 4.75rem;
 $top-bar-responsive: $breakpoint-md;
 $top-bar-nav-svg-size: 40px;
 $top-bar-logo-size: 60px;
-$nav-item-width:200px;
+$nav-item-width: 200px;
 
 @mixin logo {
   .logo {
-    display:flex;
+    display: flex;
     align-items: stretch;
 
-    >a {
-      display:flex;
+    > a {
+      display: flex;
       align-items: center;
 
       img {
@@ -27,12 +27,12 @@ $nav-item-width:200px;
 
 @mixin top-nav-bar {
   .top-nav-bar {
-    flex:1;
+    flex: 1;
     margin: 0 $spacing-large;
     > .nav-list {
-      display:flex;
+      display: flex;
       > li {
-        display:flex;
+        display: flex;
         align-items: stretch;
         justify-content: center;
         height: $top-bar-height;
@@ -42,7 +42,7 @@ $nav-item-width:200px;
         }
 
         > a {
-          display:flex;
+          display: flex;
           flex-direction: column;
           justify-content: center;
 
@@ -59,7 +59,98 @@ $nav-item-width:200px;
 }
 
 @mixin theme-toggle {
-      
+  .theme-toggle {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    touch-action: pan-x;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+
+    &:focus {
+      outline:0;
+      .theme-toggle-thumb {
+        border-color: 0 0 2px 3px #ffa7c4;
+      }
+    }
+
+    > .theme-toggle-track {
+      width: 50px;
+      height: 24px;
+      border-radius: 30px;
+      transition: all $transition-faster-ease;
+      background-color: var(--black);
+
+      .theme-toggle-track-icon {
+        position: absolute;
+        width: 17px;
+        height: 17px;
+        top: 0;
+        bottom: 0;
+        margin-top: auto;
+        margin-bottom: auto;
+        line-height: 0;
+      }
+
+      .theme-toggle-track-dark {
+        @extend .theme-toggle-track-icon;
+        left: 5px;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+      }
+
+      .theme-toggle-track-light {
+        @extend .theme-toggle-track-icon;
+        right: 5px;
+      }
+
+      img {
+        width: 16px;
+        height: 16px;
+        pointer-events: none;
+      }
+    }
+
+    &.theme-toggle--checked {
+      .theme-toggle-thumb {
+        -webkit-transform: translateX(26px);
+        transform: translateX(26px);
+        border-color: #19ab27;
+      }
+
+      .theme-toggle-track-dark {
+        opacity: 1;
+      }
+
+      .theme-toggle-track-light {
+        opacity: 0;
+      }     
+    }
+
+    > .theme-toggle-thumb {
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      width: 22px;
+      height: 22px;
+      border-radius: 50%;
+      background-color: #fafafa;
+      transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+      transform: translateX(0);
+    }
+
+    > .theme-toggle-screenreader-only {
+      height: 0;
+      width: 0;
+      position: absolute;
+      overflow: hidden;
+    }
+  }
 }
 
 .top-bar {
@@ -69,8 +160,10 @@ $nav-item-width:200px;
   z-index: 1000;
 
   > .container {
-    display:flex;
+    display: flex;
+    align-items: center;
     @include logo();
     @include top-nav-bar();
+    @include theme-toggle();
   }
 }
