--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,26 +1,21 @@
 @import "../../layout/style/base/setting";
 @import "../../layout/style/base/breakpoints";
+@import "../../layout/style/base/mixin";
 
 $top-bar-height: 4.75rem;
 $top-bar-responsive: $breakpoint-md;
 $top-bar-nav-svg-size: 40px;
 $top-bar-logo-size: 60px;
 $nav-item-width: 200px;
+$z-index: 10;
 
 @mixin logo {
   .logo {
-    display: flex;
-    align-items: stretch;
-
-    > a {
-      display: flex;
-      align-items: center;
-
-      img {
-        transition: all $transition-normal-easein;
-        width: $top-bar-logo-size;
-        height: $top-bar-logo-size;
-      }
+    margin: 0 $spacing-large;
+    img {
+      transition: all $transition-normal-easein;
+      width: $top-bar-logo-size;
+      height: $top-bar-logo-size;
     }
   }
 }
@@ -28,6 +23,28 @@ $nav-item-width: 200px;
 @mixin top-nav-bar {
   .top-nav-bar {
     flex: 1;
+
+    @include media-breakpoint-down($top-bar-responsive) {
+      display: block;
+      overflow: auto;
+      margin: 0;
+      opacity: 0;
+      visibility: hidden;
+      transition: $transition-normal-easeout;
+      position: absolute;
+      top: $top-bar-height;
+      left: 0;
+      background: linear-gradient(to right, var(--subtle-top1), var(--subtle-top2));
+      z-index: $z-index;
+      width: 100%;
+      height: calc(100vh - #{$top-bar-height});
+
+      &.open {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+
     > .nav-list {
       display: flex;
       > li {
@@ -38,20 +55,36 @@ $nav-item-width: 200px;
         &:hover {
           background: var(--hover-top);
           i {
-            color:var(--hover-top-icon);
+            color: var(--hover-top-icon);
           }
         }
 
         > a {
           display: flex;
-          flex:1;
+          flex: 1;
           flex-direction: column;
           align-items: center;
-                  
+
+          &.active {
+            color: var(--hover-top-icon);
+          }
+
           > i {
             flex: 1;
             padding-top: $spacing-normal;
             transition: all $transition-faster-linear;
+          }
+        }
+      }
+
+      @include media-breakpoint-down($top-bar-responsive) {
+        flex-direction: column;
+        justify-content: center;
+        > li {
+          padding: $spacing-normal;
+          flex-basis: $nav-item-width / 2;
+          > a > i {
+            flex: 0;
           }
         }
       }
@@ -72,6 +105,7 @@ $nav-item-width: 200px;
     background-color: transparent;
     border: 0;
     padding: 0;
+    margin: 0 $spacing-large;
 
     > .theme-toggle-track {
       width: 50px;
@@ -123,7 +157,7 @@ $nav-item-width: 200px;
 
       .theme-toggle-track-light {
         opacity: 0;
-      }     
+      }
     }
 
     > .theme-toggle-thumb {
@@ -147,7 +181,7 @@ $nav-item-width: 200px;
     }
 
     &:focus {
-      outline:0;
+      outline: 0;
       .theme-toggle-thumb {
         box-shadow: 0 0 2px 3px var(--pink);
       }
@@ -156,21 +190,49 @@ $nav-item-width: 200px;
 }
 
 .top-bar {
-  height: $top-bar-height;
   background: linear-gradient(to right, var(--subtle-top1), var(--subtle-top2));
   margin-bottom: 0;
-  z-index: 1000;
+  box-shadow: 0 $spacing-xxsmall $spacing-large var(--text-color);
+  z-index: $z-index;
 
   > .container {
     display: flex;
+    height: $top-bar-height;
     align-items: center;
 
-    > * {
-      margin: 0 $spacing-large;
+    @include media-breakpoint-down($top-bar-responsive) {
+      justify-content: space-between;
     }
 
     @include logo();
     @include top-nav-bar();
     @include theme-toggle();
+
+    .mobile-actions {
+      @include media-breakpoint-up($top-bar-responsive) {
+        display: none;
+      }
+
+      > .menu-button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        display: inline;
+        margin: 0;
+        padding: 0;
+        margin-right: $spacing-large;
+        transition: transform $transition-fast-easein;
+        @include hoverScale(1.3);
+
+        > i {
+          color: var(--text-color);
+          font-size: $base-font-size * 2;
+          @include media-breakpoint-down($breakpoint-sm) {
+            font-size: $base-font-size * 1.5;
+          }
+        }
+      }
+    }
   }
 }
