Compelte postCover component & In-process postCard

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -1,7 +1,7 @@
 @import "../../layout/style/base/setting";
 @import "../../layout/style/base/mixin";
 
-.foot {
+.footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
