--- a/src/layout/style/theme/_themes-palette.scss
+++ b/src/layout/style/theme/_themes-palette.scss
@@ -2,7 +2,9 @@
     --white: #fff;
     --black: #0f1114;
     --pink:#ffa7c4;
-    --yellow:#EFBB35;   
+    --pink2:#FF7597;
+    --yellow:#EFBB35;
+    --yellow2:rgb(245,222,179);
 }
 
 $palette : (
@@ -14,14 +16,15 @@ $palette : (
         --invert1:#282c35,
         --invert2:#F9FFEE,
         --text-color: #555,
+        --link:var(--text-color),
         --subtle-top1:rgba(107, 183, 86, 1),
         --subtle-top2:rgba(0, 143, 104, 1),
-        --subtle-header1:#EF9A9A,
-        --subtle-header2:#E53935,
-        --subtle-header3:#B71C1C,
+        --subtle-h1-1:#EF9A9A,
+        --subtle-h1-2:#E53935,
+        --subtle-h1-3:#B71C1C,
         --hover-top:#8BC34A,
         --hover-top-icon:#DF1C31,
-        --post-card-hover:var(--yellow),
+        --post-card-hover:var(--black),
         --category-border:#757575,
         --tag-border:#212121,
     ),
@@ -33,11 +36,12 @@ $palette : (
         --invert1:#F9FFEE,
         --invert2:#282C35,
         --text-color: #F9FFEE,
+        --link:var(--yellow2),
         --subtle-top1:#212121,
         --subtle-top2:#28313E,
-        --subtle-header1:#FF8F00,
-        --subtle-header2:#FFEB3B,
-        --subtle-header3:#F57F17,
+        --subtle-h1-1:#A7FFEB,
+        --subtle-h1-2:#1DE9B6,
+        --subtle-h1-3:#00BFA5,
         --hover-top:#424242,
         --hover-top-icon:#FFCF44,
         --post-card-hover:var(--text-color),
