--- a/src/components/postTags/style.scss
+++ b/src/components/postTags/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   margin: $spacing-small 0;
-  .post-tag {
+  >li>a {
     margin-right: $spacing-small;
     padding: 4px;
     display: inline-block;
