--- a/src/components/postText/style.scss
+++ b/src/components/postText/style.scss
@@ -11,7 +11,7 @@
         transition: all $transition-slower-ease;
 
         &:hover{
-            background: linear-gradient(0.25turn, var(--subtle-header1),var(--subtle-header2), var(--subtle-header3));
+            background: linear-gradient(0.25turn, var(--subtle-h1-1),var(--subtle-h1-2), var(--subtle-h1-3));
             -webkit-background-clip: text;
             background-clip : text;
             -webkit-text-fill-color: transparent;
