--- a/src/layout/style/base/_setting.scss
+++ b/src/layout/style/base/_setting.scss
@@ -4,6 +4,7 @@ $base-line-height: 1.6;
 $base-border-radius: 4px;
 $base-border: 3px;
 $base-font-size: 16px;
+$base-relative-font-size: 1rem;
 $base-spacing-unit: 1rem;
 $base-relative-spacing-unit: 1em;
 
@@ -38,12 +39,12 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 
 //header sizes
-$header-size-1: $base-font-size * 4;
-$header-size-2: $base-font-size * 2.5;
-$header-size-3: $base-font-size * 2;
-$header-size-4: $base-font-size * 1.4;
-$header-size-5: $base-font-size;
-$header-size-6: $base-font-size * 0.8;
+$header-size-1: $base-relative-font-size * 4;
+$header-size-2: $base-relative-font-size * 2.5;
+$header-size-3: $base-relative-font-size * 2;
+$header-size-4: $base-relative-font-size * 1.4;
+$header-size-5: $base-relative-font-size;
+$header-size-6: $base-relative-font-size * 0.8;
 
 // animations
 $transition-time-faster: 0.25s !default;
