--- a/src/layout/style/fonts/_fonts.scss
+++ b/src/layout/style/fonts/_fonts.scss
@@ -7,6 +7,7 @@
       url("./fonts/Rubik/Rubik-Light.ttf") format("truetype");
     font-weight: 300;
     font-style: normal;
+    font-display: swap; //https://web.dev/font-display/
   } 
   
 @font-face {
@@ -18,4 +19,5 @@
     url("./fonts/Rubik/Rubik-BoldItalic.ttf") format("truetype");
   font-weight: bold;
   font-style: italic;
+  font-display: swap; //https://web.dev/font-display/
 } 
