--- a/src/components/scrollToTop/style.scss
+++ b/src/components/scrollToTop/style.scss
@@ -6,7 +6,7 @@
   bottom: -$base-spacing-unit * 10;
   right: $base-spacing-unit * 3.5;
   border-radius: $base-border-radius;
-  color: var(--pink);
+  color: var(--pink1);
   font-size: $font-medium * 1.5;
   display: inline-flex;
   justify-content: center;
