--- a/src/layout/style/base/_mixin.scss
+++ b/src/layout/style/base/_mixin.scss
@@ -2,3 +2,19 @@
     transform-origin: 50% 50%;
     transform: scale($scale, $scale);
 }
+
+@mixin postCategory() {
+    .post-category {
+        margin-right: $spacing-small;
+        padding: 5px;
+        display: inline-block;
+        box-shadow: 0 0 $spacing-xsmall var( --category-border);
+        border-radius: $base-border-radius * 5;
+        transition: all $transition-faster-easein;
+        &:hover {
+           color:var(--invert2);
+           background: var(--invert1);
+           box-shadow: 0 0 $spacing-large var( --category-border);
+        }
+    }
+}
