--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -7,8 +7,7 @@
 
 html {
   font-size: $font-medium;
-  @include media-breakpoint-down($breakpoint-sm)
-  {
+  @include media-breakpoint-down($breakpoint-sm) {
     font-size: $font-small;
   }
 }
@@ -31,60 +30,14 @@ p {
   padding: 0;
 }
 
-li {
-  margin: 0;
-  padding: 0;
-}
-
-ol,
-ul {
-  list-style-image: none;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-img,
-svg {
-  height: auto;
-  display: inline-block;
-  max-width: 100%;
-  vertical-align: middle;
-  border: 0;
-}
-
-a,
-a:link,
-a:visited {
-  text-decoration: none;
-  color: var(--link);
-}
-
-*,
-*:after,
-*:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-p {
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-  -ms-word-break: normal;
-  word-break: normal;
+strong {
+  font-weight: $font-weight-bold;
 }
 
 h1 {
   font-size: $header-size-1;
   font-weight: $font-weight-medium;
   margin: $base-relative-spacing-unit / 2 0;
-  background: linear-gradient(0.5turn, var(--subtle-h1-1),var(--subtle-h1-2), var(--subtle-h1-3));
-  -webkit-background-clip: text;
-  background-clip : text;
-  -webkit-text-fill-color: transparent;
 }
 
 h2 {
@@ -92,7 +45,7 @@ h2 {
   font-size: $header-size-2;
   margin: $base-relative-spacing-unit / 2 0;
   color: var(--pink2);
-  
+
   &:after {
     content: " ";
     background: linear-gradient(to right, var(--pink2), var(--bg1));
@@ -119,6 +72,52 @@ h6 {
   font-size: $header-size-6;
 }
 
+li {
+  margin: 0;
+  padding: 0;
+}
+
+ol,
+ul {
+  list-style-image: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+img,
+svg {
+  height: auto;
+  display: inline-block;
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+}
+
+*,
+*:after,
+*:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+p {
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+  -ms-word-break: normal;
+  word-break: normal;
+}
+
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+  color: var(--link);
+}
+
 [type="checkbox"],
 [type="radio"] {
   box-sizing: border-box;
@@ -127,5 +126,5 @@ h6 {
 
 hr {
   margin: $base-relative-spacing-unit * 2 0;
-  border: $base-border solid var(--yellow);
+  border: $base-border solid var(--yellow1);
 }
