--- a/src/pages/categories.scss
+++ b/src/pages/categories.scss
@@ -1,21 +1,11 @@
 @import "../layout/style/base/setting";
+@import "../layout/style/base/mixin";
 
 .categories-head {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: $spacing-small 0;
-  >li>a {
-    margin-right: $spacing-small;
-    padding: 5px;
-    display: inline-block;
-    box-shadow: 0 0 $spacing-xsmall var( --category-border);
-    border-radius: $base-border-radius * 5;
-    transition: all $transition-faster-easein;
-    &:hover {
-       color:var(--invert2);
-       background: var(--invert1);
-       box-shadow: 0 0 $spacing-large var( --category-border);
-    }
-  }
+
+  @include postCategory()
 }
