--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -1,4 +1,91 @@
+@import "../layout/style/base/setting";
+@import "../layout/style/base/mixin";
+
 //gatsby-remark-autolink-headers
 .auto-link {
-    fill: var(--text-color);
+  fill: var(--text-color);
+}
+
+.post-head {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  .post-title {
+    margin-block-end: 0;
+    margin-block-start: 0;
+    font-size: $header-size-1;
+    transition: all $transition-slower-ease;
+  }
+
+  .post-subtitle {
+    margin: $spacing-small 0;
+    @include postCategory();
+  }
+}
+
+.post-content {
+  font-size: $font-medium * 1.5;
+
+  h3 {
+    margin: $base-relative-spacing-unit 0;
+    padding: 0 $spacing-small;
+    border-left: $base-border * 2 solid var(--blue1);
+  }
+
+  ul {
+    position: relative;
+    margin-left: $base-relative-spacing-unit;
+
+    li::before {
+      content: "";
+      left: -$base-relative-spacing-unit;
+      margin-top: $base-relative-spacing-unit / 2;
+      position: absolute;
+      border: $base-border * 2 solid var(--yellow1);
+    }
+  }
+
+  a {
+    color: var(--post-content-link);
+  }
+
+  video {
+    max-width: 100%;
+  }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    > thead,
+    > tbody,
+    > tfoot {
+      > tr {
+        > th {
+          text-align: left;
+          padding: 10px;
+          line-height: 1.429;
+        }
+
+        > td {
+          padding: 10px;
+          line-height: 1.429;
+        }
+      }
+    }
+  }
+
+  table > thead > tr > th {
+    border-bottom: $base-border solid var(--yellow2);
+    font-weight: $font-weight-bold;
+  }
+
+  table > tbody + tbody {
+    border-top: $base-border solid var(--yellow2);
+  }
+
+  table > tbody > tr > td {
+    border-bottom: $base-border / 3 solid var(--yellow2);
+  }
 }
