--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -87,9 +87,9 @@ ul {
 
 img,
 svg {
+  width: 100%;
   height: auto;
   display: inline-block;
-  max-width: 100%;
   vertical-align: middle;
   border: 0;
 }
