--- a/src/layout/style/base/_mixin.scss
+++ b/src/layout/style/base/_mixin.scss
@@ -5,7 +5,7 @@
 
 @mixin postCategory() {
     .post-category {
-        margin-right: $spacing-small;
+        margin: $spacing-small $spacing-small 0 0;
         padding: 5px;
         display: inline-block;
         box-shadow: 0 0 $spacing-xsmall var( --category-border);
