--- a/src/layout/style/layout/_layout.scss
+++ b/src/layout/style/layout/_layout.scss
@@ -7,6 +7,10 @@
 .page-wrap {
     @extend .container;
     margin-top: $spacing-xlarge; 
+
+    @include media-breakpoint-down($breakpoint-sm) {
+        padding: $spacing-small;
+    }
 }
 
 .text-center {
