--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -3,7 +3,7 @@
 
 //gatsby-remark-autolink-headers
 .auto-link {
-  fill: var(--text-color);
+  fill: var(--pink2);
 }
 
 .post-head {
@@ -26,10 +26,21 @@
 .post-content {
   font-size: $font-medium * 1.5;
 
-  h3 {
-    margin: $base-relative-spacing-unit 0;
-    padding: 0 $spacing-small;
-    border-left: $base-border * 2 solid var(--blue1);
+  ol {
+    counter-reset: ol-counter;
+    li {
+      counter-increment: ol-counter;
+
+      p {
+        display: inline-block;
+      }
+
+      &::before {
+        content: counter(ol-counter) ". ";
+        color: red;
+        font-weight: $font-weight-bold;      
+      }
+    }
   }
 
   ul {
@@ -38,7 +49,7 @@
 
     li::before {
       content: "";
-      left: -$base-relative-spacing-unit;
+      transform: translate(-$base-relative-spacing-unit,0);
       margin-top: $base-relative-spacing-unit / 2;
       position: absolute;
       border: $base-border * 2 solid var(--yellow1);
@@ -51,6 +62,10 @@
 
   video {
     max-width: 100%;
+  }
+
+  pre {
+    overflow: auto;
   }
 
   table {
