add post prev and next, styling mobile action

--- a/src/components/postPagination/style.scss
+++ b/src/components/postPagination/style.scss
@@ -13,8 +13,18 @@
     justify-content: space-around;
     align-items: center;
 
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .active {
-      color: red;
+      width: $relative-spacing-xlarge;
+      height: $relative-spacing-xlarge;
+      color: var(--invert2);
+      background: var(--invert1);
+      border-radius: 50%;
     }
   }
 }
