--- a/src/layout/style/base/_setting.scss
+++ b/src/layout/style/base/_setting.scss
@@ -26,12 +26,12 @@ $relative-spacing-xlarge: $base-relative-spacing-unit * 2;
 $relative-spacing-xxlarge: $base-relative-spacing-unit * 3;
 
 //font-size
-$font-xsmall: $base-font-size / 1.6;
-$font-small: $base-font-size / 1.3;
-$font-medium: $base-font-size;
-$font-large: $base-font-size * 1.75;
-$font-xlarge: $base-font-size * 2;
-$font-xxlarge: $base-font-size * 3;
+$font-xsmall: $base-relative-font-size / 1.6;
+$font-small: $base-relative-font-size / 1.3;
+$font-medium: $base-relative-font-size;
+$font-large: $base-relative-font-size * 1.75;
+$font-xlarge: $base-relative-font-size * 2;
+$font-xxlarge: $base-relative-font-size * 3;
 
 //font weight
 $font-weight-normal: 300;
