--- a/src/components/postCard/style.scss
+++ b/src/components/postCard/style.scss
@@ -48,9 +48,10 @@ $card-height:250px;
         transform: translate(0,-$spacing-normal); 
     }
 
-    @include media-breakpoint-down($breakpoint-md)
+    @include media-breakpoint-down($breakpoint-sm)
     {
         display: flex;
+        font-size: $font-medium * 1.3;
         .post-card-cover {
             visibility: hidden;
         }
