--- a/src/components/postTags/style.scss
+++ b/src/components/postTags/style.scss
@@ -3,9 +3,11 @@
 .post-tags {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   padding: 0;
   margin: $spacing-small 0;
   >li>a {
+    margin-top: $spacing-small;
     margin-right: $spacing-small;
     padding: 4px;
     display: inline-block;
