try to solve when window first loaded it's not working

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -3,7 +3,7 @@
 @import "../../layout/style/base/mixin";
 
 $top-bar-height: 4.75rem;
-$top-bar-responsive: $breakpoint-md;
+$top-bar-responsive: $breakpoint-sm;
 $top-bar-nav-svg-size: 40px;
 $top-bar-logo-size: 60px;
 $nav-item-width: 200px;
