--- a/src/components/postCard/style.scss
+++ b/src/components/postCard/style.scss
@@ -1,7 +1,7 @@
 @import "../../layout/style/base/setting";
 @import "../../layout/style/base/breakpoints";
 @import "../../layout/style/base/mixin";
-$card-height:250px;
+$card-height:275px;
 
 .post-card {
     display: grid;
@@ -52,9 +52,7 @@ $card-height:250px;
     {
         display: flex;
         font-size: $font-medium * 1.3;
-        .post-card-cover {
-            visibility: hidden;
-        }
+        height: $card-height - 45;
     }
 }
 
