--- a/src/layout/style/layout/_layout.scss
+++ b/src/layout/style/layout/_layout.scss
@@ -16,3 +16,17 @@
 .text-center {
     text-align: center; 
 }
+
+.post-category {
+    margin: $spacing-small $spacing-small 0 0;
+    padding: 5px;
+    display: inline-block;
+    box-shadow: 0 0 $spacing-xsmall var( --category-border);
+    border-radius: $base-border-radius * 5;
+    transition: all $transition-faster-easein;
+    &:hover {
+       color:var(--invert2);
+       background: var(--invert1);
+       box-shadow: 0 0 $spacing-large var( --category-border);
+    }
+}
