add Rubik fonts instead of  gatsby-plugin-web-font-loader

--- a/src/layout/style/fonts/fontawesome/scss/_my-icons.scss
+++ b/src/layout/style/fonts/fontawesome/scss/_my-icons.scss
@@ -10,3 +10,4 @@
 .#{$fa-css-prefix}-arrow-left:before { content: fa-content($fa-var-arrow-left); }
 .#{$fa-css-prefix}-bars:before { content: fa-content($fa-var-bars); }
 .#{$fa-css-prefix}-times:before { content: fa-content($fa-var-times); }
+.#{$fa-css-prefix}-calendar-alt:before { content: fa-content($fa-var-calendar-alt); }
