--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -4,6 +4,7 @@
 @import './fonts/fontawesome/scss/solid.scss';
 @import './fonts/fontawesome/scss/brands.scss';
 @import './fonts/fontawesome/scss/fontawesome.scss';
+@import './fonts/Rubik/scss/fonts';
 @import "./base/breakpoints";
 @import "./layout/layout";
 
