--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -9,8 +9,8 @@
         display: flex;
         align-content: center;   
         .user-avatar {
-            flex-basis: 200px;
-            height: 150px;
+            width: 144px;
+            height: 100px;
             background: var(--white);
             border-radius: 50%;
             margin: 0 $base-spacing-unit;
