Refactor SEO image path

--- a/src/layout/style/fonts/fontawesome/scss/_my-icons.scss
+++ b/src/layout/style/fonts/fontawesome/scss/_my-icons.scss
@@ -11,3 +11,4 @@
 .#{$fa-css-prefix}-bars:before { content: fa-content($fa-var-bars); }
 .#{$fa-css-prefix}-times:before { content: fa-content($fa-var-times); }
 .#{$fa-css-prefix}-calendar-alt:before { content: fa-content($fa-var-calendar-alt); }
+.#{$fa-css-prefix}-rss:before { content: fa-content($fa-var-rss); }
