--- a/src/components/postTags/style.scss
+++ b/src/components/postTags/style.scss
@@ -5,7 +5,7 @@
   align-items: center;
   flex-wrap: wrap;
   padding: 0;
-  margin: $spacing-small 0;
+  margin: 0;
   >li>a {
     margin-top: $spacing-small;
     margin-right: $spacing-small;
