--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -2,29 +2,24 @@
 @import "../layout/style/base/breakpoints";
 
 .about {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto 2fr;
 
-    .about-head {
+    .user-avatar {
+        width: 144px;
+        height: 144px;
+        margin: 0 $base-spacing-unit;
+    }
+
+    .about-context {
         display: flex;
-        align-content: center;   
-        .user-avatar {
-            width: 144px;
-            height: 100px;
-            background: var(--white);
-            border-radius: 50%;
-            margin: 0 $base-spacing-unit;
-
-            @include media-breakpoint-down($breakpoint-sm)
-            {
-                height: 60px;
-            }
-
+        align-content: center; 
+        h3 {
+            margin: 0;
         }
 
-        p {
-            display: flex;
-            align-items: center;
+        .time {
+            margin: $relative-spacing-xsmall 0;
         }
     }
 }
