Complete what-learned-from-create-a-blog.md

--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -30,7 +30,7 @@
   ol {
     margin-left: -$relative-spacing-xlarge;
     counter-reset: ol-counter;
-    li {
+    > li {
       counter-increment: ol-counter;
 
       p {
