re-styling markdown-css

--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -1,10 +1,10 @@
 @import "./base/setting";
 @import "./base/normalize";
 @import "./theme/themes";
-@import './fonts/fontawesome/scss/solid.scss';
-@import './fonts/fontawesome/scss/brands.scss';
-@import './fonts/fontawesome/scss/fontawesome.scss';
-@import './fonts/Rubik/scss/fonts';
+@import "./fonts/fontawesome/scss/solid.scss";
+@import "./fonts/fontawesome/scss/brands.scss";
+@import "./fonts/fontawesome/scss/fontawesome.scss";
+@import "./fonts/Rubik/scss/fonts";
 @import "./base/breakpoints";
 @import "./layout/layout";
 
@@ -83,6 +83,7 @@ li {
 
 ol,
 ul {
+  padding-inline-start: 0;
   list-style-image: none;
   list-style-type: none;
 }
