--- a/src/templates/post-markdown.scss
+++ b/src/templates/post-markdown.scss
@@ -1,110 +1,103 @@
-$font-size: 20px;
-$font-color:var(--text-color);
-$header-color:var(--pink2);
-$excerpt-border-color:var(--yellow1);
-$link-color:var(--post-content-link);
-
 .markdowm-body {
-    font-size: $font-size;
-    color: $font-color;
-    word-wrap: break-word;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+  font-size: $base-relative-font-size * 1.5;
+  color: var(--text-color);
+  word-wrap: break-word;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 
-    >p:first-of-type {
-        margin-bottom: $relative-spacing-normal;
-        margin-top: 1.9 * $relative-spacing-normal;
-        border-left: 4px solid $excerpt-border-color;
-        padding-left: .8 * $relative-spacing-normal;
-        text-align: justify;
+  > p:first-of-type {
+    margin-bottom: $relative-spacing-normal;
+    margin-top: 1.9 * $relative-spacing-normal;
+    border-left: 4px solid var(--pink2);
+    padding-left: 0.8 * $relative-spacing-normal;
+    text-align: justify;
+  }
+
+  a {
+    color: var(--post-content-link);
+    &:hover {
+      text-decoration: underline;
     }
+  }
 
-    a {
-      color: $link-color;
-      &:hover{
-        text-decoration: underline;
+  video {
+    max-width: 100%;
+  }
+
+  pre {
+    overflow: auto;
+  }
+
+  ol,
+  ul {
+    padding-left: 2 * $relative-spacing-normal;
+  }
+
+  > ol,
+  > ul {
+    padding-left: 0;
+  }
+
+  ol {
+    counter-reset: ol-counter;
+    > li {
+      counter-increment: ol-counter;
+
+      p {
+        display: inline-block;
+      }
+
+      &::before {
+        content: counter(ol-counter) ". ";
+        color: var(--red1);
+        font-weight: $font-weight-bold;
       }
     }
+  }
 
-    video {
-      max-width: 100%;
+  ul > li {
+    &::before {
+      content: "";
+      transform: translate(-$base-relative-spacing-unit, 0);
+      margin-top: $base-relative-spacing-unit / 2;
+      position: absolute;
+      border: $base-border * 2 solid var(--pink2);
     }
-  
-    pre {
-      overflow: auto;
-    }
+  }
 
-    ol, ul {
-      padding-left: 2 * $relative-spacing-normal;
-    }
-
-    ol {
-      counter-reset: ol-counter;
-      > li {
-        counter-increment: ol-counter;
-  
-        p {
-          display: inline-block;
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    > thead,
+    > tbody,
+    > tfoot {
+      > tr {
+        > th {
+          text-align: left;
+          padding: 10px;
+          line-height: 1.429;
         }
-  
-        &::before {
-          content: counter(ol-counter) ". ";
-          color: var(--red1);
-          font-weight: $font-weight-bold;
+
+        > td {
+          padding: 10px;
+          line-height: 1.429;
         }
       }
     }
-  
-    ul {
-      > li {
-        >p:first-of-type {
-          font-weight: $font-weight-bold;
-        }
+  }
 
-        &::before {
-          content: "";
-          transform: translate(-$base-relative-spacing-unit, 0);
-          margin-top: $base-relative-spacing-unit / 2;
-          position: absolute;
-          border: $base-border * 2 solid var(--pink2);
-        }
-      }
-    }
-    
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      max-width: 100%;
-      margin-bottom: 20px;
-      > thead,
-      > tbody,
-      > tfoot {
-        > tr {
-          > th {
-            text-align: left;
-            padding: 10px;
-            line-height: 1.429;
-          }
-  
-          > td {
-            padding: 10px;
-            line-height: 1.429;
-          }
-        }
-      }
-    }
-  
-    table > thead > tr > th {
-      border-bottom: $base-border solid var(--yellow2);
-      font-weight: $font-weight-bold;
-    }
-  
-    table > tbody + tbody {
-      border-top: $base-border solid var(--yellow2);
-    }
-  
-    table > tbody > tr > td {
-      border-bottom: $base-border / 3 solid var(--yellow2);
-    }
+  table > thead > tr > th {
+    border-bottom: $base-border solid var(--yellow2);
+    font-weight: $font-weight-bold;
+  }
+
+  table > tbody + tbody {
+    border-top: $base-border solid var(--yellow2);
+  }
+
+  table > tbody > tr > td {
+    border-bottom: $base-border / 3 solid var(--yellow2);
+  }
 }
-
