--- a/src/layout/style/style.scss
+++ b/src/layout/style/style.scss
@@ -48,11 +48,11 @@ h2 {
   display: flex;
   font-size: $header-size-2;
   margin: $base-relative-spacing-unit / 2 0;
-  color: var(--pink2);
+  color: var(--header-h2);
 
   &:after {
     content: " ";
-    background: linear-gradient(to right, var(--pink2), var(--bg1));
+    background: linear-gradient(to right, var(--header-h2), var(--bg1));
     height: $base-border;
     width: auto;
     flex-grow: 1;
