--- a/src/layout/style/theme/_themes-palette.scss
+++ b/src/layout/style/theme/_themes-palette.scss
@@ -25,6 +25,7 @@ $palette: (
     --subtle-h1-1: #ef9a9a,
     --subtle-h1-2: #e53935,
     --subtle-h1-3: #b71c1c,
+    --header-h2:rgb(0, 143, 131),
     --hover-top: #8bc34a,
     --hover-top-icon: #df1c31,
     --post-card-hover: var(--black),
@@ -46,6 +47,7 @@ $palette: (
     --subtle-h1-1: #a7ffeb,
     --subtle-h1-2: #1de9b6,
     --subtle-h1-3: #00bfa5,
+    --header-h2:#ff7597,
     --hover-top: #424242,
     --hover-top-icon: #ffcf44,
     --post-card-hover: var(--text-color),
