--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -32,7 +32,7 @@
   display: flex;
   align-items: center;
   font-size: $font-large;
-  margin: $spacing-large 0;
+  margin: $spacing-large * 5 0;
 
   .post-prev,
   .mobile-post-prev {
