Style post-next and post-prev

--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -36,11 +36,19 @@
 
   .post-prev,
   .mobile-post-prev {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-right: auto;
+    padding-right: $spacing-large;
   }
 
   .post-next,
   .mobile-post-next {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
+    padding-left: $spacing-large;
   }
 }
