Add <figcaption>'s margin-bottom

--- a/src/templates/post-markdown.scss
+++ b/src/templates/post-markdown.scss
@@ -60,6 +60,10 @@ $alertStyles: (
     padding-left: 1em;
   }
 
+  figcaption {
+    margin-bottom: $relative-spacing-normal;
+  }
+
   ol {
     counter-reset: ol-counter;
     list-style-position: outside;
