--- a/src/templates/post-markdown.scss
+++ b/src/templates/post-markdown.scss
@@ -62,6 +62,9 @@ $alertStyles: (
 
   figcaption {
     margin-bottom: $relative-spacing-normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   ol {
